# trade-spend-data-diagnostic

./: .claude-project-url  .env.example  .gitignore  .gitleaks.toml  .gitmodules  .pre-commit-config.yaml  AUDIT.md  CLAUDE.md  CUSTOMIZATION.md  DECISIONS.md  DEFENSIBILITY.md  EXECUTIVE_MEMO.md  FAILURES.md  HANDOFF.md  LICENSE  PLAN.md  PROJECT_PLAN.md  README.md  REVIEW_DATA.md  build_all.py  build_workbook.py  data_requirements.md  requirements.txt  validate_workbook.py  walkthrough.md
.claude/: CLAUDE.md  settings.local.json
.process/: FAILURES.md  PLAN.md  REMEDIATION.md  REVIEW_CODE.md  (+1 more)
cinderhaven-data/: .gitignore  AUDIT.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  FAILURES.md  HANDOFF.md  PLAN.md  README.md  TRADE_SPEND_VERIFICATION.md  data_generation_log.md  pyproject.toml  requirements.txt
cinderhaven-data/research/retailers/: costco.md  kehe.md  sprouts.md  unfi.md  walmart.md  wegmans.md  whole-foods.md
cinderhaven-data/scripts/: 01_generate_stores.py  02_generate_distribution.py  02b_generate_chargebacks.py  03_generate_costs.py  04_generate_promos.py  04b_generate_price_history.py  05_generate_scan_data.py  06_validate_dataset.py  07_seed_deduction_tables.py  08_generate_orders.py  09_generate_pack_records.py  10_generate_shipments.py  11_generate_deductions.py  12_generate_post_audit_claims.py  13_generate_remittances.py  14_generate_disputes.py  15_validate_deductions.py  build_db.py  extract_seed.py  inspect_platform.py  seed_deduction_schema.sql  seed_deduction_static.sql  seed_distributors.sql  seed_product_master.sql  shared.py
(+233 files in other folders)
